--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    
     <title>portFolio</title>
   </head>
   <body class="bg-bgColor min-h-[100vh] ">
